<resources>
    <string name="app_name">The Weather app</string>
    <string name="location">Location</string>
    <string name="update_at">Update at</string>
    <string name="clear_sky">Clear sky</string>
    <string name="degrees">24°C</string>
    <string name="min_temperature">Min temperature</string>
    <string name="max_temperature">Max temperature</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="info">info</string>
    <string name="time">5:30 a.m</string>
</resources>